# plugin-interface

./: .gitignore  .gitmodules  CMakeLists.txt
battle-royal-example/: CMakeLists.txt
battle-royal-example/src/: BattleRoyal.cpp  BattleRoyal.hpp  Commands.cpp  Commands.hpp  Events.cpp
battle-royal-example/src/World/: World.cpp  World.hpp  WorldGroup.cpp  WorldGroup.hpp
cubic-server/: Client.hpp  Server.hpp
cubic-server/blocks/: CMakeLists.txt
cubic-server/chat/: CMakeLists.txt
cubic-server/chat/events/: CMakeLists.txt
cubic-server/chat/events/clicks/: CMakeLists.txt
cubic-server/chat/events/hovers/: CMakeLists.txt
cubic-server/command_parser/commands/: CMakeLists.txt
cubic-server/configuration/: CMakeLists.txt
cubic-server/default/: CMakeLists.txt
cubic-server/generation/: CMakeLists.txt
cubic-server/interface/: CMakeLists.txt
cubic-server/items/: CMakeLists.txt
cubic-server/logging/: CMakeLists.txt
cubic-server/math/: CMakeLists.txt
cubic-server/protocol/serialization/: CMakeLists.txt
cubic-server/protocol_id_converter/: CMakeLists.txt
cubic-server/thread_pool/: CMakeLists.txt
cubic-server/whitelist/: Whitelist.hpp
cubic-server/world_storage/: CMakeLists.txt
plugin/: Plugin.hpp
plugin-interface/: CMakeLists.txt
plugin-interface/src/: PluginInterface.cpp  PluginInterface.hpp
src/Plugin/: Plugin.cpp  Plugin.hpp
src/PluginInterface/: PluginInterface.cpp  PluginInterface.hpp
